# Grail

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
db/: schema.sql
licenses/: MIT.txt  THIRD_PARTY_NOTES.md
rag/: chunk_report.md  rag_init.py  rag_manifest.json  rag_query.py  requirements.txt
rag/docs/chunks/: grail_reference_chunks.jsonl  pandocs_chunks.jsonl  rgbds_chunks.jsonl
src/grail/: __init__.py  cli.py
src/grail/db/: __init__.py  connection.py  info.py  init.py  schema.sql
src/grail/project/: __init__.py  config.py  index.py  info.py  init.py
tools/: grail_tool.py
