[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "grail-re"
version = "0.0.1"
description = "Game Boy Reverse Engineering AI Lab"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "vinceip" }
]

[project.scripts]
grail = "grail.cli:main"

[tool.setuptools.package-data]
"grail.db" = ["schema.sql"]